--- a/config/config.json
+++ b/config/config.json
@@ -1,18 +1,18 @@
 {
-
     "express": {
         "view cache": false,
         "view engine": "js",
         "views": "path:./.build/templates"
     },
-
     "view engines": {
         "js": {
             "module": "engine-munger",
             "renderer": {
                 "method": "js",
                 "arguments": [
-                    { "cache": true },
+                    {
+                        "cache": true
+                    },
                     {
                         "views": "config:express.views",
                         "view engine": "config:express.view engine",
@@ -23,30 +23,27 @@
             }
         }
     },
-
-
     "i18n": {
         "contentPath": "path:./locales",
         "fallback": "en-US"
     },
-
-
-
     "middleware": {
-
         "static": {
             "module": {
-                "arguments": [ "path:./.build" ]
+                "arguments": [
+                    "path:./.build"
+                ]
             }
         },
-
         "router": {
             "module": {
-                "arguments": [{ "directory": "path:./controllers" }]
+                "arguments": [
+                    {
+                        "directory": "path:./controllers"
+                    }
+                ]
             }
         },
-
-
         "expressView": {
             "priority": 100,
             "enabled": true,
@@ -54,26 +51,26 @@
                 "name": "engine-munger/lib/expressView"
             }
         },
-
-
         "fileNotFound": {
             "enabled": true,
             "priority": 130,
             "module": {
                 "name": "kraken-js/middleware/404",
-                "arguments": [ "errors/404" ]
+                "arguments": [
+                    "errors/404"
+                ]
             }
         },
-
         "serverError": {
             "enabled": true,
             "priority": 140,
             "module": {
                 "name": "kraken-js/middleware/500",
-                "arguments": [ "errors/500" ]
+                "arguments": [
+                    "errors/500"
+                ]
             }
         },
-
         "logger": {
             "module": {
                 "name": "morgan",
@@ -82,6 +79,5 @@
                 ]
             }
         }
-
     }
 }
